deploykube/app/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
spec:
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
        - name: weather-app
          image: ___K8S_IMG___
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 5000
            name: http          
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 1500m
              memory: 1500Mi
