deploykube/app/svc-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weather-app
  labels:
    app: weather-app
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: weather-app
